--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
 		"autoprefixer": "^10.4.13",
+		"humanize-duration": "^3.27.3",
+		"mongoose": "^6.8.1",
 		"postcss": "^8.4.20",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
@@ -23,6 +25,7 @@
 		"tailwindcss": "^3.2.4",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
+		"uuid": "^9.0.0",
 		"vite": "^4.0.3"
 	},
 	"type": "module"
