--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
 		"autoprefixer": "^10.4.13",
+		"flowbite": "^1.6.3",
 		"humanize-duration": "^3.27.3",
 		"mongoose": "^6.8.1",
 		"postcss": "^8.4.20",
