--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"type": "module",
 	"dependencies": {
 		"discord.js": "^14.7.1",
-		"nodemailer": "^6.9.1"
+		"nodemailer": "^6.9.1",
+		"svelte-media-query": "^1.1.2"
 	}
 }
