--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/adapter-node": "^1.2.2",
 		"@sveltejs/kit": "^1.0.0",
 		"autoprefixer": "^10.4.13",
 		"flowbite": "^1.6.3",
