--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1"
-	},
-	"type": "module",
-	"dependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.11.0",
 		"autoprefixer": "^10.4.14",
-		"discord.js": "^14.7.1",
-		"humanize-duration": "^3.28.0",
-		"mongoose": "^7.0.1",
-		"nodemailer": "^6.9.1",
 		"postcss": "^8.4.21",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.56.0",
 		"svelte-check": "^3.1.2",
 		"svelte-media-query": "^1.1.2",
 		"tailwindcss": "^3.2.7",
 		"tslib": "^2.5.0",
 		"typescript": "^4.9.5",
-		"uuid": "^9.0.0",
 		"vite": "^4.1.4"
+	},
+	"type": "module",
+	"dependencies": {
+		"discord.js": "^14.7.1",
+		"humanize-duration": "^3.28.0",
+		"mongoose": "^7.0.1",
+		"nodemailer": "^6.9.1",
+		"uuid": "^9.0.0"
 	}
 }
